docs(readme): trim intro compiler claim and drop JPMS wording
- Remove the "modular (JPMS) projects work out of the box" sentence from the
  intro.
- Shorten the Compiler Tree API line to a plain statement that analysis runs on
  the standard Java Compiler Tree API (com.sun.source), dropping the
  "matches javac exactly rather than a separate parser" clause.
- Unbold "JUnit Platform" in the requirements section.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>